--- a/content/dart2js程式.html
+++ b/content/dart2js程式.html
@@ -149,8 +149,12 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">10th week << <a href='10th week.html'>Previous</a> <a href='temperature.html'>Next</a> >> temperature<br /><h1>11th week</h1>
-<br />10th week << <a href='10th week.html'>Previous</a> <a href='temperature.html'>Next</a> >> temperature</div>
+    <div id="tipue_search_content">13th week << <a href='13th week.html'>Previous</a> <a href='image.html'>Next</a> >> image<br /><h1>dart2js程式</h1>
+<p><span color="blue" style="color: blue;">請輸入所要轉換的溫度<br/>以數字加上 C 或 F:<br/></span><br/><input id="temp" max="30" min="1" type="text" value="20F"/> <input id="submit" type="button" value="換算"/><br/> <br/>轉換結果:<br/><br/><label id="output"></label></p>
+<script src="./../downloads/temperature2.js"></script>
+<div id="wrapper"><canvas height="200" id="canvas" width="300"></canvas> <button id="button">Clear Canvas</button> <button id="roc">Draw ROC</button> <button id="usa">Draw USA</button></div>
+<script src="./../downloads/roc_flag.js"></script>
+<br />13th week << <a href='13th week.html'>Previous</a> <a href='image.html'>Next</a> >> image</div>
         
     <!-- footer -->
       <div class="container">
