--- a/content/7th week.html
+++ b/content/7th week.html
@@ -149,8 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">LOOP << <a href='LOOP.html'>Previous</a> <a href='引用倉儲 Dart 程式(rungekutta).html'>Next</a> >> 引用倉儲 Dart 程式(rungekutta)<br /><h1>7th week</h1>
-<br />LOOP << <a href='LOOP.html'>Previous</a> <a href='引用倉儲 Dart 程式(rungekutta).html'>Next</a> >> 引用倉儲 Dart 程式(rungekutta)</div>
+    <div id="tipue_search_content">LOOP << <a href='LOOP.html'>Previous</a> <a href='引用倉儲 Dart 程式(rungekutta).html'>Next</a> >> 引用倉儲 Dart 程式(rungekutta)<br /><h1>7th week</h1><br />LOOP << <a href='LOOP.html'>Previous</a> <a href='引用倉儲 Dart 程式(rungekutta).html'>Next</a> >> 引用倉儲 Dart 程式(rungekutta)</div>
         
     <!-- footer -->
       <div class="container">
