--- a/content/EX3.html
+++ b/content/EX3.html
@@ -149,15 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">8th week << <a href='8th week.html'>Previous</a> <a href='10th week.html'>Next</a> >> 10th week<br /><h1>EX3</h1>
-<p><img caption="false" height="37" src="./../images/EX3-1-2.png" width="285"/></p>
-<p style="text-align: center;"><img caption="false" height="97" src="./../images/EX3-1-1.png" width="200"/></p>
-<p style="text-align: left;"><img caption="false" height="38" src="./../images/EX3-2-1.png" width="250"/></p>
-<p style="text-align: center;"><img alt="" height="91" src="./../images/EX3-2-2.png" width="200"/></p>
-<p style="text-align: left;"><img alt="" height="24" src="./../images/EX3-3-1.png" width="250"/><img alt="600" caption="false" height="34" src="./../images/EX3-3-2.png" width="600"/></p>
-<p style="text-align: center;"><img caption="false" height="124" src="./../images/EX3-3-3.png" width="200"/></p>
-<p style="text-align: left;"><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=25f3dd4d1af915d8e7e42c5d69313985" width="900"></iframe></p>
-<br />8th week << <a href='8th week.html'>Previous</a> <a href='10th week.html'>Next</a> >> 10th week</div>
+    <div id="tipue_search_content">8th week << <a href='8th week.html'>Previous</a> <a href='10th week.html'>Next</a> >> 10th week<br /><h1>EX3</h1><p><img caption="false" data-mce-src="./../images/EX3-1-2.png" height="37" src="./../images/EX3-1-2.png" width="285"/></p><p data-mce-style="text-align: center;" style="text-align: center;"><img caption="false" data-mce-src="./../images/EX3-1-1.png" height="97" src="./../images/EX3-1-1.png" width="200"/></p><p data-mce-style="text-align: left;" style="text-align: left;"><img caption="false" data-mce-src="./../images/EX3-2-1.png" height="38" src="./../images/EX3-2-1.png" width="250"/></p><p data-mce-style="text-align: center;" style="text-align: center;"><img alt="" data-mce-src="./../images/EX3-2-2.png" height="91" src="./../images/EX3-2-2.png" width="200"/></p><p data-mce-style="text-align: left;" style="text-align: left;"><img alt="" data-mce-src="./../images/EX3-3-1.png" height="24" src="./../images/EX3-3-1.png" width="250"/><img alt="600" caption="false" data-mce-src="./../images/EX3-3-2.png" height="34" src="./../images/EX3-3-2.png" width="600"/></p><p data-mce-style="text-align: center;" style="text-align: center;"><img caption="false" data-mce-src="./../images/EX3-3-3.png" height="124" src="./../images/EX3-3-3.png" width="200"/></p><p data-mce-style="text-align: left;" style="text-align: left;"><span class="mce-preview-object mce-object-iframe" contenteditable="false" data-mce-object="iframe" data-mce-p-src="https://dartpad.dev/embed-inline.html?id=25f3dd4d1af915d8e7e42c5d69313985"><iframe frameborder="0" height="600" src="https://dartpad.dev/embed-inline.html?id=25f3dd4d1af915d8e7e42c5d69313985" width="900"></iframe><span class="mce-shim"></span></span></p><br />8th week << <a href='8th week.html'>Previous</a> <a href='10th week.html'>Next</a> >> 10th week</div>
         
     <!-- footer -->
       <div class="container">
