--- a/content/引用倉儲 Dart 程式(rungekutta).html
+++ b/content/引用倉儲 Dart 程式(rungekutta).html
@@ -149,14 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">7th week << <a href='7th week.html'>Previous</a> <a href='rungekutta chart.html'>Next</a> >> rungekutta chart<br /><h1>引用倉儲 Dart 程式(rungekutta)</h1>
-<p><span>程式碼位於:</span><a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for</a></p>
-<p><span>包含 yaml 檔案:<a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/dartpad_metadata.yaml">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/dartpad_metadata.yaml</a></span></p>
-<p>以及所要引用的 Dart 程式:<a href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/rungekutta.dart">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/rungekutta.dart</a> </p>
-<p><span>若為 console 模式, 利用 rungekutta.dart 與 dartpad_metadata.yaml 透過 embed-dart.html </span><span>導入.</span></p>
-<p>若為網頁模式, 利用 rungekutta.dart, index.html style.css 與 dartpad_metadata.yaml 透過 embed-html.html 導入.</p>
-<p><span>rungekutta.dart 原始碼:</span></p>
-<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">// 下列 Dart 程式, 利用 Runge Kutta 迭代運算法, 解常微分方程式
+    <div id="tipue_search_content">7th week << <a href='7th week.html'>Previous</a> <a href='rungekutta chart.html'>Next</a> >> rungekutta chart<br /><h1>引用倉儲 Dart 程式(rungekutta)</h1><p><span>程式碼位於:</span><a data-mce-href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for" href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for</a></p><p><span>包含 yaml 檔案:<a data-mce-href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/dartpad_metadata.yaml" href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/dartpad_metadata.yaml">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/dartpad_metadata.yaml</a></span></p><p>以及所要引用的 Dart 程式:<a data-mce-href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/rungekutta.dart" href="https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/rungekutta.dart">https://github.com/40823131/cp2019/blob/master/downloads/dart_ex/for/rungekutta.dart</a> </p><p><span>若為 console 模式, 利用 rungekutta.dart 與 dartpad_metadata.yaml 透過 embed-dart.html </span><span>導入.</span></p><p>若為網頁模式, 利用 rungekutta.dart, index.html style.css 與 dartpad_metadata.yaml 透過 embed-html.html 導入.</p><p><span>rungekutta.dart 原始碼:</span></p><pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">// 下列 Dart 程式, 利用 Runge Kutta 迭代運算法, 解常微分方程式
 // 設 t 為時間, x 則設為物體的位移
 // 假設要解 F=ma 的單一質量加上彈簧 (常數為 k) 與黏滯阻尼 (常數為 b)
 // f 為沿位移方向的施力
@@ -238,18 +231,13 @@ main() {
   num t = 5;
   double h = 0.1;
   rungeKutta(t0, x0, v0, t, h);
-}</pre>
-<p><span>dartpad_metadata.yaml 設定檔案:</span></p>
-<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false"># 說明此 yaml 檔案所引用程式的目的
+}</pre><p><span>dartpad_metadata.yaml 設定檔案:</span></p><pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false"># 說明此 yaml 檔案所引用程式的目的
 name: Dart for rungeKutta example1
 # 引用模式為純 dart 或 html 模式
 mode: dart
 # 所包含引入的程式名稱, 若為純 dart 則只包含 dart 程式, 若為 html 模式, 則加入 index.htm 與 style.css
 files:
-  - name: rungeKutta.dart</pre>
-<p><span>利用 iframe 標註引入 For RungeKutta 程式:</span></p>
-<p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823131&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
-<br />7th week << <a href='7th week.html'>Previous</a> <a href='rungekutta chart.html'>Next</a> >> rungekutta chart</div>
+  - name: rungeKutta.dart</pre><p><span>利用 iframe 標註引入 For RungeKutta 程式:</span></p><p><span class="mce-preview-object mce-object-iframe" contenteditable="false" data-mce-object="iframe" data-mce-p-src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823131&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark"><iframe frameborder="0" height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823131&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe><span class="mce-shim"></span></span></p><br />7th week << <a href='7th week.html'>Previous</a> <a href='rungekutta chart.html'>Next</a> >> rungekutta chart</div>
         
     <!-- footer -->
       <div class="container">
