--- a/content/5th week.html
+++ b/content/5th week.html
@@ -149,8 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">Weekly progress << <a href='Weekly progress.html'>Previous</a> <a href='Hello,world!程式.html'>Next</a> >> Hello,world!程式<br /><h1>5th week</h1>
-<br />Weekly progress << <a href='Weekly progress.html'>Previous</a> <a href='Hello,world!程式.html'>Next</a> >> Hello,world!程式</div>
+    <div id="tipue_search_content">Weekly progress << <a href='Weekly progress.html'>Previous</a> <a href='Hello,world!程式.html'>Next</a> >> Hello,world!程式<br /><h1>5th week</h1><br />Weekly progress << <a href='Weekly progress.html'>Previous</a> <a href='Hello,world!程式.html'>Next</a> >> Hello,world!程式</div>
         
     <!-- footer -->
       <div class="container">
