--- a/content/6th week.html
+++ b/content/6th week.html
@@ -149,8 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">Hello,world!程式 << <a href='Hello,world!程式.html'>Previous</a> <a href='LOOP.html'>Next</a> >> LOOP<br /><h1>6th week</h1>
-<br />Hello,world!程式 << <a href='Hello,world!程式.html'>Previous</a> <a href='LOOP.html'>Next</a> >> LOOP</div>
+    <div id="tipue_search_content">Hello,world!程式 << <a href='Hello,world!程式.html'>Previous</a> <a href='LOOP.html'>Next</a> >> LOOP<br /><h1>6th week</h1><br />Hello,world!程式 << <a href='Hello,world!程式.html'>Previous</a> <a href='LOOP.html'>Next</a> >> LOOP</div>
         
     <!-- footer -->
       <div class="container">
