--- a/content/8th week.html
+++ b/content/8th week.html
@@ -149,8 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">rungekutta chart << <a href='rungekutta chart.html'>Previous</a> <a href='EX3.html'>Next</a> >> EX3<br /><h1>8th week</h1>
-<br />rungekutta chart << <a href='rungekutta chart.html'>Previous</a> <a href='EX3.html'>Next</a> >> EX3</div>
+    <div id="tipue_search_content">rungekutta chart << <a href='rungekutta chart.html'>Previous</a> <a href='EX3.html'>Next</a> >> EX3<br /><h1>8th week</h1><br />rungekutta chart << <a href='rungekutta chart.html'>Previous</a> <a href='EX3.html'>Next</a> >> EX3</div>
         
     <!-- footer -->
       <div class="container">
