--- a/content/LOOP.html
+++ b/content/LOOP.html
@@ -149,15 +149,11 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">6th week << <a href='6th week.html'>Previous</a> <a href='7th week.html'>Next</a> >> 7th week<br /><h1>LOOP</h1>
-<p>gist:<a href="https://gist.github.com/40823131/0cf03a8b73201ed411749211d7199d20">https://gist.github.com/40823131/0cf03a8b73201ed411749211d7199d20</a></p>
-<p><a href="https://mde.tw/dartpad/?id=0cf03a8b73201ed411749211d7199d20">https://mde.tw/dartpad/?id=0cf03a8b73201ed411749211d7199d20</a></p>
-<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">void main() {
+    <div id="tipue_search_content">6th week << <a href='6th week.html'>Previous</a> <a href='7th week.html'>Next</a> >> 7th week<br /><h1>LOOP</h1><p>gist:<a data-mce-href="https://gist.github.com/40823131/0cf03a8b73201ed411749211d7199d20" href="https://gist.github.com/40823131/0cf03a8b73201ed411749211d7199d20">https://gist.github.com/40823131/0cf03a8b73201ed411749211d7199d20</a></p><p><a data-mce-href="https://mde.tw/dartpad/?id=0cf03a8b73201ed411749211d7199d20" href="https://mde.tw/dartpad/?id=0cf03a8b73201ed411749211d7199d20">https://mde.tw/dartpad/?id=0cf03a8b73201ed411749211d7199d20</a></p><pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">void main() {
   for (int i = 0; i &lt; 5; i++) {
     print('hello ${i + 1}');
   }
-}</pre>
-<br />6th week << <a href='6th week.html'>Previous</a> <a href='7th week.html'>Next</a> >> 7th week</div>
+}</pre><br />6th week << <a href='6th week.html'>Previous</a> <a href='7th week.html'>Next</a> >> 7th week</div>
         
     <!-- footer -->
       <div class="container">
