--- a/content/rungekutta chart.html
+++ b/content/rungekutta chart.html
@@ -149,11 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">引用倉儲 Dart 程式(rungekutta) << <a href='引用倉儲 Dart 程式(rungekutta).html'>Previous</a> <a href='8th week.html'>Next</a> >> 8th week<br /><h1>rungekutta chart</h1>
-<p><img alt="" height="289" src="./../images/EXCEL_iHjXff8xBP.png" width="482"/></p>
-<p><img alt="" height="287" src="./../images/EXCEL_BoTIp2GRRS.png" width="478"/></p>
-<p>簡諧運動</p>
-<br />引用倉儲 Dart 程式(rungekutta) << <a href='引用倉儲 Dart 程式(rungekutta).html'>Previous</a> <a href='8th week.html'>Next</a> >> 8th week</div>
+    <div id="tipue_search_content">引用倉儲 Dart 程式(rungekutta) << <a href='引用倉儲 Dart 程式(rungekutta).html'>Previous</a> <a href='8th week.html'>Next</a> >> 8th week<br /><h1>rungekutta chart</h1><p><img alt="" data-mce-src="./../images/EXCEL_iHjXff8xBP.png" height="289" src="./../images/EXCEL_iHjXff8xBP.png" width="482"/></p><p><img alt="" data-mce-src="./../images/EXCEL_BoTIp2GRRS.png" height="287" src="./../images/EXCEL_BoTIp2GRRS.png" width="478"/></p><p>簡諧運動</p><br />引用倉儲 Dart 程式(rungekutta) << <a href='引用倉儲 Dart 程式(rungekutta).html'>Previous</a> <a href='8th week.html'>Next</a> >> 8th week</div>
         
     <!-- footer -->
       <div class="container">
