按鈕故障修正

--- a/content/11th week.html
+++ b/content/11th week.html
@@ -149,7 +149,8 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">10th week << <a href='10th week.html'>Previous</a> <a href='temperature.html'>Next</a> >> temperature<br /><h1>11th week</h1><br />10th week << <a href='10th week.html'>Previous</a> <a href='temperature.html'>Next</a> >> temperature</div>
+    <div id="tipue_search_content">10th week << <a href='10th week.html'>Previous</a> <a href='temperature.html'>Next</a> >> temperature<br /><h1>11th week</h1>
+<br />10th week << <a href='10th week.html'>Previous</a> <a href='temperature.html'>Next</a> >> temperature</div>
         
     <!-- footer -->
       <div class="container">
