--- a/content/13th week.html
+++ b/content/13th week.html
@@ -149,7 +149,10 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">temperature << <a href='temperature.html'>Previous</a> <a href='dart2js程式.html'>Next</a> >> dart2js程式<br /><h1>13th week</h1><p><span class="mce-preview-object mce-object-iframe" contenteditable="false" data-mce-object="iframe" data-mce-p-allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" data-mce-p-allowfullscreen="allowfullscreen" data-mce-p-frameborder="0" data-mce-p-src="https://www.youtube.com/embed/0RtGLI-pglg"><iframe allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/0RtGLI-pglg" width="560"></iframe><span class="mce-shim"></span></span></p><p><span class="mce-preview-object mce-object-iframe" contenteditable="false" data-mce-object="iframe" data-mce-p-allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" data-mce-p-allowfullscreen="allowfullscreen" data-mce-p-frameborder="0" data-mce-p-src="https://www.youtube.com/embed/r_5GxQ0wICo"><iframe allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/r_5GxQ0wICo" width="560"></iframe><span class="mce-shim"></span></span></p><br />temperature << <a href='temperature.html'>Previous</a> <a href='dart2js程式.html'>Next</a> >> dart2js程式</div>
+    <div id="tipue_search_content">temperature << <a href='temperature.html'>Previous</a> <a href='dart2js程式.html'>Next</a> >> dart2js程式<br /><h1>13th week</h1>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/0RtGLI-pglg" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/r_5GxQ0wICo" width="560"></iframe></p>
+<br />temperature << <a href='temperature.html'>Previous</a> <a href='dart2js程式.html'>Next</a> >> dart2js程式</div>
         
     <!-- footer -->
       <div class="container">
