--- a/content/Weekly progress.html
+++ b/content/Weekly progress.html
@@ -149,7 +149,9 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">W16 查驗考試 << <a href='W16 查驗考試.html'>Previous</a> <a href='5th week.html'>Next</a> >> 5th week<br /><h1>Weekly progress</h1><!-- 透過 getDart(dirname) 取位於 downloads/dart_ex/ 目錄中 dirname 目錄中的 Dart 程式碼 --><script type="mce-no/type">
+    <div id="tipue_search_content">W16 查驗考試 << <a href='W16 查驗考試.html'>Previous</a> <a href='5th week.html'>Next</a> >> 5th week<br /><h1>Weekly progress</h1>
+<!-- 透過 getDart(dirname) 取位於 downloads/dart_ex/ 目錄中 dirname 目錄中的 Dart 程式碼 -->
+<script>
 function getDart(dirname){
     source = "https://dartpad.github.io/embed-dart.html?gh_owner=40823131&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
     document.getElementById("iframe").src = source ;
@@ -174,7 +176,11 @@ function original(){
 document.getElementById("iframe").width = 800 ;
 document.getElementById("iframe").height = 600 ;
 }
-</script><p><button onclick="getHtmlDart('usaflag')">USA Flag</button></p><p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p><p><span class="mce-preview-object mce-object-iframe" contenteditable="false" data-mce-object="iframe" data-mce-p-id="iframe" data-mce-p-src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823131&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/rungekutta&amp;theme=dark"><iframe frameborder="0" height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823131&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/rungekutta&amp;theme=dark" width="800"></iframe><span class="mce-shim"></span></span></p><br />W16 查驗考試 << <a href='W16 查驗考試.html'>Previous</a> <a href='5th week.html'>Next</a> >> 5th week</div>
+</script>
+<p><button onclick="getHtmlDart('usaflag')">USA Flag</button></p>
+<p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
+<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823131&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/rungekutta&amp;theme=dark" width="800"></iframe></p>
+<br />W16 查驗考試 << <a href='W16 查驗考試.html'>Previous</a> <a href='5th week.html'>Next</a> >> 5th week</div>
         
     <!-- footer -->
       <div class="container">
