--- a/content/image.html
+++ b/content/image.html
@@ -149,7 +149,8 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">dart2js程式 << <a href='dart2js程式.html'>Previous</a> <br /><h1>image</h1><p><img alt="" data-mce-src="./../images/main111.jpg" height="219" src="./../images/main111.jpg" width="543"/></p><br />dart2js程式 << <a href='dart2js程式.html'>Previous</a> </div>
+    <div id="tipue_search_content">dart2js程式 << <a href='dart2js程式.html'>Previous</a> <br /><h1>image</h1>
+<p><img alt="" height="219" src="./../images/main111.jpg" width="543"/></p><br />dart2js程式 << <a href='dart2js程式.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
