--- a/content/W17考試.html
+++ b/content/W17考試.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='W16 查驗考試.html'>W16 查驗考試</a><li class='has-children'><a href='Weekly progress.html'>Weekly progress</a><ul class='dropdown'><li class='has-children'><a href='5th week.html'>5th week</a><ul class='dropdown'><li><a href='Hello,world!程式.html'>Hello,world!程式</a></li></ul><li class='has-children'><a href='6th week.html'>6th week</a><ul class='dropdown'><li><a href='LOOP.html'>LOOP</a></li></ul><li class='has-children'><a href='7th week.html'>7th week</a><ul class='dropdown'><li><a href='引用倉儲 Dart 程式(rungekutta).html'>引用倉儲 Dart 程式(rungekutta)</a><li><a href='rungekutta chart.html'>rungekutta chart</a></li></ul><li class='has-children'><a href='8th week.html'>8th week</a><ul class='dropdown'><li><a href='EX3.html'>EX3</a></li></ul><li><a href='10th week.html'>10th week</a><li class='has-children'><a href='11th week.html'>11th week</a><ul class='dropdown'><li><a href='temperature.html'>temperature</a></li></ul><li><a href='13th week.html'>13th week</a></li></ul><li><a href='dart2js程式.html'>dart2js程式</a><li><a href='image.html'>image</a></li>
+                     <li><a href='W16 查驗考試.html'>W16 查驗考試</a><li class='has-children'><a href='Weekly progress.html'>Weekly progress</a><ul class='dropdown'><li class='has-children'><a href='5th week.html'>5th week</a><ul class='dropdown'><li><a href='Hello,world!程式.html'>Hello,world!程式</a></li></ul><li class='has-children'><a href='6th week.html'>6th week</a><ul class='dropdown'><li><a href='LOOP.html'>LOOP</a></li></ul><li class='has-children'><a href='7th week.html'>7th week</a><ul class='dropdown'><li><a href='引用倉儲 Dart 程式(rungekutta).html'>引用倉儲 Dart 程式(rungekutta)</a><li><a href='rungekutta chart.html'>rungekutta chart</a></li></ul><li class='has-children'><a href='8th week.html'>8th week</a><ul class='dropdown'><li><a href='EX3.html'>EX3</a></li></ul><li><a href='10th week.html'>10th week</a><li class='has-children'><a href='11th week.html'>11th week</a><ul class='dropdown'><li><a href='program.html'>program</a></li></ul><li><a href='13th week.html'>13th week</a></li></ul><li><a href='dart2js程式.html'>dart2js程式</a><li><a href='image.html'>image</a><li><a href='W17考試.html'>W17考試</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,45 +149,11 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">11th week << <a href='11th week.html'>Previous</a> <a href='13th week.html'>Next</a> >> 13th week<br /><h1>temperature</h1>
-<p><!-- 透過 getDart(dirname) 取位於 downloads/dart_ex/ 目錄中 dirname 目錄中的 Dart 程式碼 -->
-<script>
-function getDart(dirname){
-    source = "https://dartpad.github.io/embed-dart.html?gh_owner=40823131&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
-    document.getElementById("iframe").src = source ;
-}
-
-function getHtmlDart(dirname){
-    source = "https://dartpad.github.io/embed-html.html?gh_owner=40823131&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
-document.getElementById("iframe").src = source ;
-}
-
-function getFlutter(dirname){
-    source = "https://dartpad.github.io/embed-flutter.html?gh_owner=40823131&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
-document.getElementById("iframe").src = source ;
-}
-
-function largest(){
-document.getElementById("iframe").width = document.body.clientWidth ;
-document.getElementById("iframe").height = document.body.clientWidth*0.5 ;
-}
-
-function original(){
-document.getElementById("iframe").width = 800 ;
-document.getElementById("iframe").height = 600 ;
-}
-</script>
-<!-- 取 Dart 程式的按鈕 --></p>
-<h4>純 Dart 程式</h4>
-<p><button onclick="getDart('rungekutta')">rungekutta</button><button onclick="getDart('helloworld')">helloworld</button><button onclick="getDart('temperature')">temperature</button><button onclick="getDart('for')">For Loop</button><button onclick="getDart('sum')">Sum</button><button onclick="getDart('rk_ex1')">RK ex1</button><button onclick="getDart('mass_spring_damping')">Mass Spring Damping</button><button onclick="getDart('function')">Function</button> <button onclick="getDart('fun_parameter')">Function Parameter</button> <button onclick="getDart('fat_arrow')">Fat Arrow</button></p>
-<h4>Html 程式</h4>
-<p><button onclick="getHtmlDart('roc_flag')">ROC Flag</button><button onclick="getHtmlDart('usaflag')">USA Flag</button> <button onclick="getHtmlDart('tmpe2')">temperature2</button><button onclick="getHtmlDart('grid')">Grid</button> <button onclick="getHtmlDart('xyplot')">X-Y Plot</button> <button onclick="getHtmlDart('slithery')">Slithery</button></p>
-<h4>Flutter 程式</h4>
-<p><button onclick="getFlutter('flutter0')">Flutter0</button> <button onclick="getFlutter('flutter1')">Flutter1</button> <button onclick="getFlutter('flutter2')">Flutter2</button> <button onclick="getFlutter('flutter3')">Flutter3</button> <button onclick="getFlutter('flutter4')">Flutter4</button> <button onclick="getFlutter('flutter_counter')">Flutter Counter</button> <button onclick="getFlutter('flutter_roc')">ROC Flag</button> <button onclick="getFlutter('flutter_mine1')">踩地雷 1</button> <button onclick="getFlutter('flutter_mine2')">踩地雷 2</button> <button onclick="getFlutter('flutter_mine3')">踩地雷 3</button> <button onclick="getFlutter('flutter_mine4')">踩地雷 4</button></p>
-<p><!-- 內建放入的 Dart 原始碼 --></p>
-<p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
-<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823131&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/rungekutta&amp;theme=dark" width="800"></iframe></p>
-<br />11th week << <a href='11th week.html'>Previous</a> <a href='13th week.html'>Next</a> >> 13th week</div>
+    <div id="tipue_search_content">image << <a href='image.html'>Previous</a> <br /><h1>W17考試</h1>
+<p>重量轉換(DART)</p>
+<p><a href="https://dartpad.github.io/?id=d41fc4bd61beb16f8831fe11787cc9b5">https://dartpad.github.io/?id=d41fc4bd61beb16f8831fe11787cc9b5</a> </p>
+<p><span>重量轉換(HTML)</span></p>
+<p><a href="https://dartpad.github.io/?id=e2bd9b72716d509cd21c1e348422cc0b">https://dartpad.github.io/?id=e2bd9b72716d509cd21c1e348422cc0b</a> </p><br />image << <a href='image.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
