--- a/content/W17考試.html
+++ b/content/W17考試.html
@@ -194,7 +194,9 @@ document.getElementById("iframe").height = 600 ;
 <script src="./../downloads/weight.js"></script>
 <p>各國國旗</p>
 <p><canvas height="200" id="canvas" width="380"></canvas> <button id="button">Clear Canvas</button> <button id="roc">Draw ROC</button> <button id="jp">Draw JP</button> <button id="france">Draw France</button> <button id="russia">Draw Russia</button> <button id="usa">Draw USA</button> <button id="uk">Draw UK</button> <button id="netherlands">Draw Netherlands</button> <button id="germany">Draw Germany</button></p>
-<script src="./../downloads/flag.js"></script><br />image << <a href='image.html'>Previous</a> </div>
+<script src="./../downloads/flag.js"></script>
+<p>影片</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/NW0CryYrWK0" width="560"></iframe></p><br />image << <a href='image.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
