--- a/reveal/index.html
+++ b/reveal/index.html
@@ -39,15 +39,15 @@ CMSimfly 網際內容管理
 <div class="slides">
 <section data-markdown>
     <script type="text/template">
-## CMSimfly 網際內容管理
+## CP2019
 
-### KMOLab
+### 40823131
 
 <small>
-Created by [KMOLab](http://lab.kmol.info/)
+Created by [40823131](https://github.com/40823131/cp2019)
 </small>
 
-[CMSimfly 網誌](./../blog/index.html)
+[40823131 CP2019 網誌](./../blog/index.html)
 
 
     </script>
@@ -116,12 +116,12 @@ def domake():
 make = threading.Thread(target=domake)
 make.start()
 ```
-    </script>
+</script>
+</section>
 </section>
 
 
-
-						
+<section>						
 <section data-markdown>
     <script type="text/template">
 ## 使用 iframe 導入影片
@@ -132,8 +132,8 @@ make.start()
     </script>
 </section>
 
-
-						
+<section data-markdown>
+    <script type="text/template">
 </section>
 
 </div>
@@ -146,6 +146,7 @@ make.start()
         // More info https://github.com/hakimel/reveal.js#configuration
         Reveal.initialize({
             controls: true,
+            slideNumber: true,
             progress: true,
             history: true,
             center: true,
