簡報心得修改

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -154,19 +154,11 @@ Created by [40823131](https://github.com/40823131/cp2019)
 <section data-markdown>
     <script type="text/template">
 # <span style = "color:pink"><big>學習心得</big></span>
-從一開始我像無頭蒼蠅般的摸索，但我還是窮追不捨，努力去理解並達到課程的要求，在老師的教導帶領下也算是打下了一些程式基礎，相信有了這些磨練，對以後相關的課程將會有莫大的幫助。在學期後期的小組任務中與同學間的討論，也幫助我更加理解程式內所寫的內容，也感覺到比起以前現在的我可以比較輕鬆的跟上老師的進度，也從中獲取到極大的成就感。
+從一開始我完全跟不上老師的進度，但我還是窮追不捨，努力去理解並達到課程的要求，在老師的教導帶領下也算是打下了一些程式基礎，相信有了這些磨練，對以後相關的課程將會有莫大的幫助。在學期後期的小組任務中與同學間的討論，也幫助我更加理解程式內所寫的內容，也感覺到比起以前現在的我可以比較輕鬆的跟上老師的進度，也從中獲取到極大的成就感。
 ***************************************************
  <small>[回到目錄](https://40823131.github.io/cp2019/reveal/index.html#/1)</small>
 </script>
 </section>
-
-
-
-
-
-
-
-
 
 
 
