簡報內容修改

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -46,7 +46,9 @@
 <small>
 Created by [40823131](https://github.com/40823131/cp2019)
 </small>
-
+***************************************************
+[倉儲](https://github.com/40823131/cp2019)
+[個人網頁](https://40823131.github.io/cp2019/content/index.html)
 [CP2019 Blog](./../blog/index.html)
 
 
@@ -160,6 +162,14 @@ Created by [40823131](https://github.com/40823131/cp2019)
 </script>
 </section>
 
+<section data-markdown>
+    <script type="text/template">
+# <span style = "color:pink"><big>影片</big></span>
+[youtube channel](https://www.youtube.com/channel/UC_Otpnico_3aSyDmowCUGyg)
+***************************************************
+ <small>[回到目錄](https://40823131.github.io/cp2019/reveal/index.html#/1)</small>
+</script>
+</section>
 
 
 
