--- a/content/10th week.html
+++ b/content/10th week.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='W16 查驗考試.html'>W16 查驗考試</a><li class='has-children'><a href='Weekly progress.html'>Weekly progress</a><ul class='dropdown'><li class='has-children'><a href='5th week.html'>5th week</a><ul class='dropdown'><li><a href='Hello,world!程式.html'>Hello,world!程式</a></li></ul><li class='has-children'><a href='6th week.html'>6th week</a><ul class='dropdown'><li><a href='LOOP.html'>LOOP</a></li></ul><li class='has-children'><a href='7th week.html'>7th week</a><ul class='dropdown'><li><a href='引用倉儲 Dart 程式(rungekutta).html'>引用倉儲 Dart 程式(rungekutta)</a><li><a href='rungekutta chart.html'>rungekutta chart</a></li></ul><li class='has-children'><a href='8th week.html'>8th week</a><ul class='dropdown'><li><a href='EX3.html'>EX3</a></li></ul><li><a href='10th week.html'>10th week</a><li class='has-children'><a href='11th week.html'>11th week</a><ul class='dropdown'><li><a href='program.html'>program</a></li></ul><li><a href='13th week.html'>13th week</a></li></ul><li><a href='dart2js程式.html'>dart2js程式</a><li><a href='image.html'>image</a><li><a href='W17考試.html'>W17考試</a></li>
+                     <li><a href='W16 查驗考試.html'>W16 查驗考試</a><li class='has-children'><a href='Weekly progress.html'>Weekly progress</a><ul class='dropdown'><li class='has-children'><a href='5th week.html'>5th week</a><ul class='dropdown'><li><a href='Hello,world!程式.html'>Hello,world!程式</a></li></ul><li class='has-children'><a href='6th week.html'>6th week</a><ul class='dropdown'><li><a href='LOOP.html'>LOOP</a></li></ul><li class='has-children'><a href='7th week.html'>7th week</a><ul class='dropdown'><li><a href='引用倉儲 Dart 程式(rungekutta).html'>引用倉儲 Dart 程式(rungekutta)</a><li><a href='rungekutta chart.html'>rungekutta chart</a></li></ul><li class='has-children'><a href='8th week.html'>8th week</a><ul class='dropdown'><li><a href='EX3.html'>EX3</a></li></ul><li><a href='10th week.html'>10th week</a><li class='has-children'><a href='11th-15th week.html'>11th-15th week</a><ul class='dropdown'><li><a href='program.html'>program</a></li></ul><li><a href='13th week.html'>13th week</a></li></ul><li><a href='dart2js程式.html'>dart2js程式</a><li><a href='image.html'>image</a><li><a href='W17考試.html'>W17考試</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,9 +149,9 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">EX3 << <a href='EX3.html'>Previous</a> <a href='11th week.html'>Next</a> >> 11th week<br /><h1>10th week</h1>
+    <div id="tipue_search_content">EX3 << <a href='EX3.html'>Previous</a> <a href='11th-15th week.html'>Next</a> >> 11th-15th week<br /><h1>10th week</h1>
 <p>分組倉儲:<a href="https://github.com/40823131/cp2019ag6">https://github.com/40823131/cp2019ag6</a></p>
-<br />EX3 << <a href='EX3.html'>Previous</a> <a href='11th week.html'>Next</a> >> 11th week</div>
+<br />EX3 << <a href='EX3.html'>Previous</a> <a href='11th-15th week.html'>Next</a> >> 11th-15th week</div>
         
     <!-- footer -->
       <div class="container">
